--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <style type="text/css">
 </style>
         <head>
+<meta name="robots" content="noindex">
+<meta name="googlebot" content="noindex">
         <section>
         <div id="main">
         <link rel="stylesheet" href="main.css">
